--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -10,12 +10,12 @@ version="${file.jarVersion}"
 authors="Vazkii, WireSegal, MCVinnyq, Sully"
 description='''Small things, improving Minecraft bit by bit.'''
 
-[[dependencies.quark]]
-    modId="autoreglib"
-    mandatory=true
-    versionRange="[1.8-54,)"
-    ordering="AFTER"
-    side="BOTH"
+[[mods]]
+modId="autoreglib"
+displayName="AutoRegLib"
+version="${file.jarVersion}"
+authors="Vazkii"
+description='''Automatically item, block, and model registration for mods.'''
 
 [[dependencies.quark]]
     modId="forge"
