--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@ build_number=440
 maven_group=org.violetmoon.quark
 
 minecraft_version=1.20.1
+enabled_platforms=fabric,forge
 
 # Mappings
 # https://lambdaurora.dev/tools/import_quilt.html
