--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -21,6 +21,8 @@ dependencies {
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
+
+    modImplementation("org.violetmoon.zeta-fabric:Zeta-fabric-1.20.1:1.0-beta")
 }
 
 processResources {
