--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -25,6 +25,8 @@ dependencies {
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive = false }
+
+    modImplementation("org.violetmoon.zeta-fabric:Zeta-fabric-1.20.1:1.0-beta")
 }
 
 processResources {
