--- a/common/build.gradle
+++ b/common/build.gradle
@@ -12,4 +12,6 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${fabric_loader_version}"
 
     modImplementation("org.violetmoon.zeta-common:Zeta-common-1.20.1:1.0-beta")
+
+    modCompileOnlyApi("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
 }
