--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,7 @@ fabric_api_version=0.92.1+1.20.1
 # Forge
 # https://files.minecraftforge.net/net/minecraftforge/forge/
 forge_version=47.1.3
+
+# JEI
+# https://www.curseforge.com/minecraft/mc-mods/jei/files
+jei_version=15.3.0.4
