--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,20 @@
 buildscript {
     repositories {
-        maven { url = 'https://maven.minecraftforge.net' }
-        maven { url = 'https://repo.spongepowered.org/maven' }
-        maven { url = 'https://maven.parchmentmc.org' }
-        mavenCentral()
-    }
-    dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1+', changing: true
-        classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7-SNAPSHOT'
-        classpath group: 'org.parchmentmc.librarian.forgegradle', name: 'org.parchmentmc.librarian.forgegradle.gradle.plugin', version: '1.+'
+        maven {
+            url = "https://maven.minecraftforge.net"
+        }
     }
 }
 
 plugins {
-	id 'com.diffplug.spotless' version '6.22.0'
+    id 'java-library'
+    id 'eclipse'
+    id 'idea'
+    id 'maven-publish'
+    id 'pmd'
+    id 'com.diffplug.spotless' version '6.22.0'
+    id 'net.neoforged.gradle.userdev' version '7.0.142'
 }
-
-apply plugin: 'net.minecraftforge.gradle'
-apply plugin: 'org.spongepowered.mixin'
-apply plugin: 'org.parchmentmc.librarian.forgegradle'
-apply plugin: 'eclipse'
-apply plugin: 'maven-publish'
-apply plugin: 'pmd'
 
 jarJar.enable()
 
@@ -36,45 +29,40 @@ archivesBaseName = config.mod_name
 
 compileJava.options.compilerArgs << "-Xlint:all,-classfile,-processing,-deprecation"
 
-java.toolchain.languageVersion = JavaLanguageVersion.of(17)
+java.toolchain.languageVersion = JavaLanguageVersion.of(21)
 println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 
 if (System.getenv('BUILD_NUMBER') != null) {
     version += "." + System.getenv('BUILD_NUMBER')
 }
 
-minecraft {
-    mappings channel: 'parchment', version: '2023.09.03-1.20.1'
-    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+runs {
+    // applies to all the run configs below
+    configureEach {
+        systemProperty "mixin.debug.export", "true"
+        // Recommended logging data for a userdev environment
+        // The markers can be added/remove as needed separated by commas.
+        // "SCAN": For mods scan.
+        // "REGISTRIES": For firing of registry events.
+        // "REGISTRYDUMP": For getting the contents of all registries.
+        systemProperty 'forge.logging.markers', 'REGISTRIES'
 
-    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+        // Recommended logging level for the console
+        // You can set various levels here.
+        // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
+        systemProperty 'forge.logging.console.level', 'debug'
 
-    // Default run configurations.
-    // These can be tweaked, removed, or duplicated as needed.
-    runs {
-        configureEach {
-            property "mixin.debug.export", "true"
-            mods {
-                quark {
-                    source sourceSets.main
-                }
-            }
-        }
-
-        client {
-            workingDirectory project.file('run')
-        }
-
-        server {
-            workingDirectory project.file('runServer')
-        }
+        modSource project.sourceSets.main
     }
-}
 
-mixin {
-    add sourceSets.main, 'quark.mixins.refmap.json'
-    config 'quark.mixins.json'
-    config 'quark_integrations.mixins.json'
+    client {
+        workingDirectory project.file('run')
+    }
+
+    server {
+        workingDirectory project.file('runServer')
+        programArgument '--nogui'
+    }
 }
 
 repositories {
@@ -103,6 +91,12 @@ repositories {
     maven { // Curios api
         url = "https://maven.theillusivec4.top/"
     }
+    maven {
+        url = "https://api.modrinth.com/maven"
+    }
+    maven {
+        url = "https://maven.minecraftforge.net"
+    }
 
     maven {
         name "jitpack"
@@ -111,34 +105,31 @@ repositories {
 }
 
 dependencies {
-    minecraft "net.minecraftforge:forge:${config.mc_version}-${deps.forge}"
-
-    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.3.2"))
-    implementation("io.github.llamalad7:mixinextras-forge:0.3.2")
+    implementation "net.neoforged:neoforge:${deps.neoforge}"
 
     //annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
     //normal AP is broken!!
-    annotationProcessor 'net.fabricmc:sponge-mixin:0.12.5+mixin.0.8.5'
-
+    // annotationProcessor 'net.fabricmc:sponge-mixin:0.12.5+mixin.0.8.5'
 
     //runtimeOnly fg.deobf("dev.emi:emi-forge:${deps.emi}")
-    runtimeOnly fg.deobf("curse.maven:spark-361579:${deps.spark}")
+    runtimeOnly "maven.modrinth:spark:${deps.spark}"
 
     //implementation fg.deobf("org.violetmoon.zeta:Zeta:1.0-25a")
-    implementation fg.deobf("curse.maven:zeta-968868:5597406")
-    implementation fg.deobf("com.github.glitchfiend:TerraBlender-forge:${deps.terrablender}")
-    implementation fg.deobf("curse.maven:jei-238222:${deps.jei}")
-    implementation fg.deobf("curse.maven:flan-forge-493246:${deps.flan}")
-    implementation fg.deobf("curse.maven:lootr-361276:${deps.lootr}")
-    implementation fg.deobf("curse.maven:just-enough-resources-jer-240630:4689010")
+    // implementation fg.deobf("curse.maven:zeta-968868:5597406")
+    implementation project (':Zeta') // Replace with maven link
+    implementation "com.github.glitchfiend:TerraBlender-neoforge:${deps.terrablender}"
+    implementation "curse.maven:jei-238222:${deps.jei}"
+    // implementation fg.deobf("curse.maven:flan-forge-493246:${deps.flan}")
+    implementation "curse.maven:lootr-361276:${deps.lootr}"
+    // implementation fg.deobf("curse.maven:just-enough-resources-jer-240630:4689010")
 
-    runtimeOnly fg.deobf("curse.maven:nofog-296468:4601446")
-    runtimeOnly fg.deobf("curse.maven:woodworks-543610:5292418")
-    runtimeOnly fg.deobf("curse.maven:blueprint-382216:5292242")
-    runtimeOnly fg.deobf("curse.maven:farmers-delight-398521:5051242")
+    runtimeOnly "curse.maven:nofog-296468:5438578"
+    // runtimeOnly fg.deobf("curse.maven:woodworks-543610:5292418")
+    // runtimeOnly fg.deobf("curse.maven:blueprint-382216:5292242")
+    runtimeOnly "curse.maven:farmers-delight-398521:5962800"
 
-    runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:${deps.curios}")
-    compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:${deps.curios}:api")
+    // runtimeOnly fg.deobf("top.theillusivec4.curios:curios-forge:${deps.curios}")
+    // compileOnly fg.deobf("top.theillusivec4.curios:curios-forge:${deps.curios}:api")
 }
 
 spotless {
@@ -156,7 +147,7 @@ spotless {
 pmd {
     toolVersion '6.42.0'
     incrementalAnalysis.set(true)
-    ruleSets.clear()
+    ruleSets = new ArrayList()
     ruleSetFiles = files("spotless/pmd-ruleset.xml")
 }
 
@@ -209,7 +200,7 @@ def parseConfig(File config) {
 }
 
 jar {
-    classifier "pure" // Jar without jar-in-jar
+    archiveClassifier = "pure" // Jar without jar-in-jar
 
      manifest {
         attributes([
@@ -232,17 +223,12 @@ jar {
 }
 
 task sourcesJar(type: Jar) {
-    classifier "sources"
+    archiveClassifier = "sources"
     from sourceSets.main.allJava
 }
 
-task deobfJar(type: Jar) {
-    classifier "deobf"
-    from sourceSets.main.output
-}
-
 tasks.jarJar.configure {
-    classifier "" // "Main" jar should be the one with jar-in-jar
+    archiveClassifier = "" // "Main" jar should be the one with jar-in-jar
 
     exclude "**/*.bat"
     exclude "**/*.psd"
@@ -253,7 +239,6 @@ tasks.jarJar.configure {
 
 artifacts {
     archives sourcesJar
-    archives deobfJar
 }
 
 publish.dependsOn(project.tasks.getByName("assemble"))
@@ -282,10 +267,10 @@ publishing {
             }
 
             artifact sourcesJar {
-                classifier 'sources'
+                archiveClassifier = 'sources'
             }
 
-            jarJar.component(it)
+            // jarJar.component(it)
         }
     }
 
