--- a/dependencies.properties
+++ b/dependencies.properties
@@ -1,9 +1,8 @@
-forge=47.1.3
-zeta=1.0-19
-jei=4712868
-terrablender=1.20.1-3.0.0.169
+neoforge=21.1.93
+jei=5846880
+terrablender=1.21.1-4.1.0.5
 flan=5290172
-lootr=4608503
+lootr=5893109
 emi=1.0.24+1.20.1
-spark=4738952
+spark=1.10.109-neoforge
 curios=5.6.1+1.20.1
