--- a/build.gradle
+++ b/build.gradle
@@ -289,3 +289,15 @@ tasks.withType(GenerateModuleMetadata) {
 
     enabled = false
 }
+
+allprojects {
+    repositories {
+        jcenter()
+    }
+
+    gradle.projectsEvaluated {
+        tasks.withType(JavaCompile) {
+            options.compilerArgs << "-Xmaxerrs" << "5000"
+        }
+    }
+}
