--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,4 +1,3 @@
-public net.minecraft.client.gui.components.ChatComponent m_93790_(Lnet/minecraft/network/chat/Component;IIZ)V # printChatMessageWithOptionalDeletion
 public net.minecraft.client.gui.components.toasts.RecipeToast f_94805_ # recipes
 public net.minecraft.client.gui.components.toasts.ToastComponent f_94916_ # toastsQueue
 public net.minecraft.client.gui.screens.recipebook.GhostRecipe$GhostIngredient f_100161_ # ingredient
@@ -8,14 +7,14 @@ public net.minecraft.client.gui.screens.recipebook.RecipeBookComponent f_100284_
 public net.minecraft.client.gui.screens.recipebook.RecipeBookComponent m_100392_()V # updateSearch
 public net.minecraft.client.gui.screens.recipebook.RecipeBookPage f_100399_ # recipeLists
 public net.minecraft.client.multiplayer.PlayerInfo f_105299_ # playerTextures
-public net.minecraft.client.player.AbstractClientPlayer f_108546_ # playerInfo
+public net.minecraft.client.player.AbstractClientPlayer playerInfo # playerInfo
 public net.minecraft.client.renderer.LevelRenderer f_109410_ # mapSoundPositions
 public net.minecraft.client.renderer.entity.LivingEntityRenderer f_115291_ # layerRenderers
 public net.minecraft.client.renderer.entity.layers.HumanoidArmorLayer m_117078_(Lnet/minecraft/world/entity/EquipmentSlot;)Lnet/minecraft/client/model/HumanoidModel; #func_241736_a_
 public net.minecraft.util.random.Weight <init>(I)V # <init>
 public net.minecraft.world.entity.LivingEntity f_20899_ # isJumping
 public net.minecraft.world.entity.LivingEntity f_20922_ # ticksSinceLastSwing
-public net.minecraft.world.entity.ai.goal.TemptGoal f_25935_ # items
+public net.minecraft.world.entity.ai.goal.TemptGoal items # items
 public net.minecraft.world.entity.ai.gossip.GossipContainer f_26156_ # uuid_gossips_mapping
 public net.minecraft.world.entity.ai.gossip.GossipContainer$EntityGossips
 public net.minecraft.world.entity.animal.horse.AbstractHorse m_30625_()V # initHorseChest
@@ -41,11 +40,11 @@ public-f net.minecraft.world.level.levelgen.StructureSettings f_64582_ # structu
 public net.minecraft.world.level.block.VineBlock m_57887_(Lnet/minecraft/world/level/BlockGetter;Lnet/minecraft/core/BlockPos;Lnet/minecraft/core/Direction;)Z # canSupportAtFace
 public net.minecraft.data.worldgen.biome.OverworldBiomes m_194861_(Lnet/minecraft/world/level/biome/Biome$Precipitation;Lnet/minecraft/world/level/biome/Biome$BiomeCategory;FFLnet/minecraft/world/level/biome/MobSpawnSettings$Builder;Lnet/minecraft/world/level/biome/BiomeGenerationSettings$Builder;Lnet/minecraft/sounds/Music;)Lnet/minecraft/world/level/biome/Biome; # biome
 public net.minecraft.data.worldgen.biome.OverworldBiomes m_194851_(Lnet/minecraft/world/level/biome/Biome$Precipitation;Lnet/minecraft/world/level/biome/Biome$BiomeCategory;FFIILnet/minecraft/world/level/biome/MobSpawnSettings$Builder;Lnet/minecraft/world/level/biome/BiomeGenerationSettings$Builder;Lnet/minecraft/sounds/Music;)Lnet/minecraft/world/level/biome/Biome; # biome
-public-f net.minecraft.world.level.block.entity.BlockEntityType f_58915_ # validBlocks
-public-f net.minecraft.world.level.levelgen.feature.configurations.TreeConfiguration f_68185_ # trunkProvider
+public-f net.minecraft.world.level.block.entity.BlockEntityType validBlocks # validBlocks
+public-f net.minecraft.world.level.levelgen.feature.configurations.TreeConfiguration trunkProvider # trunkProvider
 public net.minecraft.client.resources.model.ModelBakery f_119243_ # resourceManager
-public net.minecraft.client.model.ChickenModel f_170486_ # leftLeg
-public net.minecraft.client.model.ChickenModel f_170485_ # rightLeg
+public net.minecraft.client.model.ChickenModel leftLeg # leftLeg
+public net.minecraft.client.model.ChickenModel rightLeg # rightLeg
 public net.minecraft.world.entity.Entity f_19817_ # isInsidePortal
 public net.minecraft.world.entity.npc.VillagerTrades$EnchantBookForEmeralds
 public net.minecraft.world.inventory.MerchantMenu m_40060_(ILnet/minecraft/world/item/ItemStack;)V # moveFromInventoryToPaymentSlot
