--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,5 +1,5 @@
-public net.minecraft.client.gui.components.toasts.RecipeToast f_94805_ # recipes
-public net.minecraft.client.gui.components.toasts.ToastComponent f_94916_ # toastsQueue
+public net.minecraft.client.gui.components.toasts.RecipeToast recipes # recipes
+public net.minecraft.client.gui.components.toasts.ToastComponent queued # queued
 public net.minecraft.client.gui.screens.recipebook.GhostRecipe$GhostIngredient f_100161_ # ingredient
 public net.minecraft.client.gui.screens.recipebook.RecipeBookComponent f_100269_ # ghostRecipe
 public net.minecraft.client.gui.screens.recipebook.RecipeBookComponent f_100281_ # searchBar
@@ -9,8 +9,9 @@ public net.minecraft.client.gui.screens.recipebook.RecipeBookPage f_100399_ # re
 public net.minecraft.client.multiplayer.PlayerInfo f_105299_ # playerTextures
 public net.minecraft.client.player.AbstractClientPlayer playerInfo # playerInfo
 public net.minecraft.client.renderer.LevelRenderer f_109410_ # mapSoundPositions
-public net.minecraft.client.renderer.entity.LivingEntityRenderer f_115291_ # layerRenderers
-public net.minecraft.client.renderer.entity.layers.HumanoidArmorLayer m_117078_(Lnet/minecraft/world/entity/EquipmentSlot;)Lnet/minecraft/client/model/HumanoidModel; #func_241736_a_
+public net.minecraft.client.renderer.entity.LivingEntityRenderer layers # layers
+public net.minecraft.client.renderer.entity.layers.HumanoidArmorLayer getArmorModel (Lnet/minecraft/world/entity/EquipmentSlot;)Lnet/minecraft/client/model/HumanoidModel; # getArmorModel
+public net.minecraft.world.entity.LivingEntity attackStrengthTicker # attackStrengthTicker
 public net.minecraft.util.random.Weight <init>(I)V # <init>
 public net.minecraft.world.entity.LivingEntity f_20899_ # isJumping
 public net.minecraft.world.entity.LivingEntity f_20922_ # ticksSinceLastSwing
@@ -18,7 +19,7 @@ public net.minecraft.world.entity.ai.goal.TemptGoal items # items
 public net.minecraft.world.entity.ai.gossip.GossipContainer f_26156_ # uuid_gossips_mapping
 public net.minecraft.world.entity.ai.gossip.GossipContainer$EntityGossips
 public net.minecraft.world.entity.animal.horse.AbstractHorse m_30625_()V # initHorseChest
-public net.minecraft.world.entity.item.FallingBlockEntity f_31946_ # blockState
+public net.minecraft.world.entity.item.FallingBlockEntity blockState # blockState
 public net.minecraft.world.entity.monster.ZombieVillager f_34361_ # gossips
 public-f net.minecraft.world.entity.player.Player f_36095_ #container
 public net.minecraft.world.entity.projectile.ThrownTrident m_7941_()Lnet/minecraft/world/item/ItemStack; # getArrowStack
@@ -54,16 +55,17 @@ public net.minecraft.world.entity.projectile.ThrownTrident f_37555_ # tridentIte
 public net.minecraft.world.item.CompassItem m_40727_(Lnet/minecraft/nbt/CompoundTag;)Ljava/util/Optional; # getLodestoneDimension
 public net.minecraft.data.worldgen.biome.OverworldBiomes m_236663_(Lnet/minecraft/world/level/biome/Biome$Precipitation;FFLnet/minecraft/world/level/biome/MobSpawnSettings$Builder;Lnet/minecraft/world/level/biome/BiomeGenerationSettings$Builder;Lnet/minecraft/sounds/Music;)Lnet/minecraft/world/level/biome/Biome; # biome
 public net.minecraft.data.worldgen.biome.OverworldBiomes m_236654_(Lnet/minecraft/world/level/biome/Biome$Precipitation;FFIILnet/minecraft/world/level/biome/MobSpawnSettings$Builder;Lnet/minecraft/world/level/biome/BiomeGenerationSettings$Builder;Lnet/minecraft/sounds/Music;)Lnet/minecraft/world/level/biome/Biome; # biome
-public net.minecraft.world.entity.animal.frog.Tadpole m_218710_(I)V # setAge
+public net.minecraft.world.entity.animal.frog.Tadpole setAge(I)V # setAge
 public net.minecraft.world.level.block.entity.BeaconBlockEntity$BeaconBeamSection f_58716_ # height
 public net.minecraft.world.entity.animal.TropicalFish m_30064_(I)I # getPatternVariant
 public net.minecraft.world.item.context.BlockPlaceContext f_43628_ # replaceClicked
 public net.minecraft.client.gui.Gui f_279580_ # GUI_ICONS_LOCATION
-public net.minecraft.world.level.block.state.BlockBehaviour$BlockStateBase f_283893_ # mapColor
+public net.minecraft.world.level.block.state.BlockBehaviour$BlockStateBase mapColor # mapColor
 public net.minecraft.core.RegistrySetBuilder$BuildState
 public net.minecraft.client.resources.model.ModelManager$ReloadState
 public net.minecraft.world.entity.npc.VillagerTrades$ItemsForEmeralds
 public net.minecraft.world.entity.npc.VillagerTrades$ItemsAndEmeraldsToItems
 public net.minecraft.world.entity.npc.VillagerTrades$EmeraldForItems
-public-f net.minecraft.world.entity.npc.VillagerType f_35827_ # BY_BIOME villager map
+public-f net.minecraft.world.entity.npc.VillagerType BY_BIOME # BY_BIOME
 public net.minecraft.world.level.levelgen.structure.StructurePiece m_73441_(Lnet/minecraft/world/level/WorldGenLevel;Lnet/minecraft/world/level/levelgen/structure/BoundingBox;IIIIIILnet/minecraft/world/level/block/state/BlockState;Lnet/minecraft/world/level/block/state/BlockState;Z)V # generateBox
+public-f net.minecraft.world.item.Item craftingRemainingItem # craftingRemainingItem
