--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,7 +1,7 @@
 public net.minecraft.client.gui.components.toasts.RecipeToast recipes # recipes
 public net.minecraft.client.gui.components.toasts.ToastComponent queued # queued
 public net.minecraft.client.gui.screens.recipebook.GhostRecipe$GhostIngredient f_100161_ # ingredient
-public net.minecraft.client.gui.screens.recipebook.RecipeBookComponent f_100269_ # ghostRecipe
+public net.minecraft.client.gui.screens.recipebook.RecipeBookComponent ghostRecipe # ghostRecipe
 public net.minecraft.client.gui.screens.recipebook.RecipeBookComponent f_100281_ # searchBar
 public net.minecraft.client.gui.screens.recipebook.RecipeBookComponent f_100284_ # recipeBookPage
 public net.minecraft.client.gui.screens.recipebook.RecipeBookComponent m_100392_()V # updateSearch
@@ -16,11 +16,11 @@ public net.minecraft.util.random.Weight <init>(I)V # <init>
 public net.minecraft.world.entity.LivingEntity f_20899_ # isJumping
 public net.minecraft.world.entity.LivingEntity f_20922_ # ticksSinceLastSwing
 public net.minecraft.world.entity.ai.goal.TemptGoal items # items
-public net.minecraft.world.entity.ai.gossip.GossipContainer f_26156_ # uuid_gossips_mapping
+public net.minecraft.world.entity.ai.gossip.GossipContainer gossips # gossips
 public net.minecraft.world.entity.ai.gossip.GossipContainer$EntityGossips
 public net.minecraft.world.entity.animal.horse.AbstractHorse m_30625_()V # initHorseChest
 public net.minecraft.world.entity.item.FallingBlockEntity blockState # blockState
-public net.minecraft.world.entity.monster.ZombieVillager f_34361_ # gossips
+public net.minecraft.world.entity.monster.ZombieVillager gossips # gossips
 public-f net.minecraft.world.entity.player.Player f_36095_ #container
 public net.minecraft.world.entity.projectile.ThrownTrident m_7941_()Lnet/minecraft/world/item/ItemStack; # getArrowStack
 public-f net.minecraft.world.inventory.AbstractContainerMenu f_38840_ # windowId
@@ -28,10 +28,12 @@ public-f net.minecraft.world.inventory.Slot f_40221_ # yPos
 public-f net.minecraft.world.item.Item f_41378_ # containerItem
 public net.minecraft.world.level.block.ButtonBlock m_51115_()I # tickRate
 public net.minecraft.world.level.block.DispenserBlock f_52661_ # DISPENSE_BEHAVIOR_REGISTRY
-public net.minecraft.world.level.block.entity.AbstractFurnaceBlockEntity f_58318_ # cookTime
-public net.minecraft.world.level.block.entity.AbstractFurnaceBlockEntity f_58319_ # cookTimeTotal
-public net.minecraft.world.level.block.entity.BeaconBlockEntity f_58649_ # beamColorSegments
-public net.minecraft.world.level.block.entity.BeaconBlockEntity f_58651_ # beaconSize
+public net.minecraft.world.level.block.entity.AbstractFurnaceBlockEntity cookingProgress # cookingProgress
+public net.minecraft.world.level.block.entity.AbstractFurnaceBlockEntity cookingTotalTime # cookingTotalTime
+public net.minecraft.world.level.block.entity.BeaconBlockEntity checkingBeamSections # checkingBeamSections # beamSections
+public net.minecraft.world.level.block.entity.BeaconBlockEntity lastCheckY # lastCheckY
+public net.minecraft.world.level.block.entity.BeaconBlockEntity$BeaconBeamSection height # height
+public net.minecraft.world.level.block.entity.BeaconBlockEntity height
 public net.minecraft.world.level.block.entity.BlockEntity f_58856_ # cachedBlockState
 public net.minecraft.world.level.block.entity.SignBlockEntity f_59720_ # signText
 public net.minecraft.world.level.block.entity.SignBlockEntity f_59721_ # isEditable
@@ -56,7 +58,6 @@ public net.minecraft.world.item.CompassItem m_40727_(Lnet/minecraft/nbt/Compound
 public net.minecraft.data.worldgen.biome.OverworldBiomes m_236663_(Lnet/minecraft/world/level/biome/Biome$Precipitation;FFLnet/minecraft/world/level/biome/MobSpawnSettings$Builder;Lnet/minecraft/world/level/biome/BiomeGenerationSettings$Builder;Lnet/minecraft/sounds/Music;)Lnet/minecraft/world/level/biome/Biome; # biome
 public net.minecraft.data.worldgen.biome.OverworldBiomes m_236654_(Lnet/minecraft/world/level/biome/Biome$Precipitation;FFIILnet/minecraft/world/level/biome/MobSpawnSettings$Builder;Lnet/minecraft/world/level/biome/BiomeGenerationSettings$Builder;Lnet/minecraft/sounds/Music;)Lnet/minecraft/world/level/biome/Biome; # biome
 public net.minecraft.world.entity.animal.frog.Tadpole setAge(I)V # setAge
-public net.minecraft.world.level.block.entity.BeaconBlockEntity$BeaconBeamSection f_58716_ # height
 public net.minecraft.world.entity.animal.TropicalFish m_30064_(I)I # getPatternVariant
 public net.minecraft.world.item.context.BlockPlaceContext f_43628_ # replaceClicked
 public net.minecraft.client.gui.Gui f_279580_ # GUI_ICONS_LOCATION
