--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,19 +1,19 @@
 public net.minecraft.client.gui.components.toasts.RecipeToast recipes # recipes
 public net.minecraft.client.gui.components.toasts.ToastComponent queued # queued
-public net.minecraft.client.gui.screens.recipebook.GhostRecipe$GhostIngredient f_100161_ # ingredient
+public net.minecraft.client.gui.screens.recipebook.GhostRecipe$GhostIngredient ingredient # ingredient
 public net.minecraft.client.gui.screens.recipebook.RecipeBookComponent ghostRecipe # ghostRecipe
-public net.minecraft.client.gui.screens.recipebook.RecipeBookComponent f_100281_ # searchBar
-public net.minecraft.client.gui.screens.recipebook.RecipeBookComponent f_100284_ # recipeBookPage
-public net.minecraft.client.gui.screens.recipebook.RecipeBookComponent m_100392_()V # updateSearch
+public net.minecraft.client.gui.screens.recipebook.RecipeBookComponent searchBox # searchBox
+public net.minecraft.client.gui.screens.recipebook.RecipeBookComponent recipeBookPage # recipeBookPage
+public net.minecraft.client.gui.screens.recipebook.RecipeBookComponent checkSearchStringUpdate()V # checkSearchStringUpdate
 public net.minecraft.client.gui.screens.recipebook.RecipeBookPage f_100399_ # recipeLists
 public net.minecraft.client.multiplayer.PlayerInfo f_105299_ # playerTextures
 public net.minecraft.client.player.AbstractClientPlayer playerInfo # playerInfo
 public net.minecraft.client.renderer.LevelRenderer f_109410_ # mapSoundPositions
 public net.minecraft.client.renderer.entity.LivingEntityRenderer layers # layers
-public net.minecraft.client.renderer.entity.layers.HumanoidArmorLayer getArmorModel (Lnet/minecraft/world/entity/EquipmentSlot;)Lnet/minecraft/client/model/HumanoidModel; # getArmorModel
+public net.minecraft.client.renderer.entity.layers.HumanoidArmorLayer getArmorModel(Lnet/minecraft/world/entity/EquipmentSlot;)Lnet/minecraft/client/model/HumanoidModel; # getArmorModel
 public net.minecraft.world.entity.LivingEntity attackStrengthTicker # attackStrengthTicker
 public net.minecraft.util.random.Weight <init>(I)V # <init>
-public net.minecraft.world.entity.LivingEntity f_20899_ # isJumping
+public net.minecraft.world.entity.LivingEntity jumping # jumping
 public net.minecraft.world.entity.LivingEntity f_20922_ # ticksSinceLastSwing
 public net.minecraft.world.entity.ai.goal.TemptGoal items # items
 public net.minecraft.world.entity.ai.gossip.GossipContainer gossips # gossips
@@ -40,7 +40,7 @@ public net.minecraft.world.level.block.entity.SignBlockEntity f_59721_ # isEdita
 public-f net.minecraft.world.level.levelgen.StructureSettings f_189361_ #configuredStructures
 public-f net.minecraft.world.level.levelgen.StructureSettings f_64580_ # DEFAULTS
 public-f net.minecraft.world.level.levelgen.StructureSettings f_64582_ # structureConfig
-public net.minecraft.world.level.block.VineBlock m_57887_(Lnet/minecraft/world/level/BlockGetter;Lnet/minecraft/core/BlockPos;Lnet/minecraft/core/Direction;)Z # canSupportAtFace
+public net.minecraft.world.level.block.VineBlock canSupportAtFace(Lnet/minecraft/world/level/BlockGetter;Lnet/minecraft/core/BlockPos;Lnet/minecraft/core/Direction;)Z # canSupportAtFace
 public net.minecraft.data.worldgen.biome.OverworldBiomes m_194861_(Lnet/minecraft/world/level/biome/Biome$Precipitation;Lnet/minecraft/world/level/biome/Biome$BiomeCategory;FFLnet/minecraft/world/level/biome/MobSpawnSettings$Builder;Lnet/minecraft/world/level/biome/BiomeGenerationSettings$Builder;Lnet/minecraft/sounds/Music;)Lnet/minecraft/world/level/biome/Biome; # biome
 public net.minecraft.data.worldgen.biome.OverworldBiomes m_194851_(Lnet/minecraft/world/level/biome/Biome$Precipitation;Lnet/minecraft/world/level/biome/Biome$BiomeCategory;FFIILnet/minecraft/world/level/biome/MobSpawnSettings$Builder;Lnet/minecraft/world/level/biome/BiomeGenerationSettings$Builder;Lnet/minecraft/sounds/Music;)Lnet/minecraft/world/level/biome/Biome; # biome
 public-f net.minecraft.world.level.block.entity.BlockEntityType validBlocks # validBlocks
@@ -68,5 +68,5 @@ public net.minecraft.world.entity.npc.VillagerTrades$ItemsForEmeralds
 public net.minecraft.world.entity.npc.VillagerTrades$ItemsAndEmeraldsToItems
 public net.minecraft.world.entity.npc.VillagerTrades$EmeraldForItems
 public-f net.minecraft.world.entity.npc.VillagerType BY_BIOME # BY_BIOME
-public net.minecraft.world.level.levelgen.structure.StructurePiece m_73441_(Lnet/minecraft/world/level/WorldGenLevel;Lnet/minecraft/world/level/levelgen/structure/BoundingBox;IIIIIILnet/minecraft/world/level/block/state/BlockState;Lnet/minecraft/world/level/block/state/BlockState;Z)V # generateBox
+public net.minecraft.world.level.levelgen.structure.StructurePiece generateBox(Lnet/minecraft/world/level/WorldGenLevel;Lnet/minecraft/world/level/levelgen/structure/BoundingBox;IIIIIILnet/minecraft/world/level/block/state/BlockState;Lnet/minecraft/world/level/block/state/BlockState;Z)V # generateBox
 public-f net.minecraft.world.item.Item craftingRemainingItem # craftingRemainingItem
